--- a/class.css
+++ b/class.css
@@ -2,21 +2,24 @@ body, html
         {
             margin: 0; padding: 0; height: 100%; 
             
-        }html { overflow-y: scroll; overflow-x:hidden; }
+        }html { overflow-y: scroll; overflow-x:hidden; 
+                background: url(background2.png) no-repeat center center fixed; 
+                -webkit-background-size: cover;
+                -moz-background-size: cover;
+                -o-background-size: cover;
+                background-size: cover;}
 
         .my-pre{
-            line-height:1.2em;
-            background:linear-gradient(180deg,#ccc 0,#ccc 1.2em,#eee 0);
-            background-size:2.4em 2.4em;
-            margin: 0;
+            
             
             /* some extra styles*/
-
+            background-color: #ffffff17;
             text-align:center;
             font-family:calibri,arial,sans-serif;
             overflow: hidden;
             white-space: pre-wrap;
             word-wrap: break-word;
+            padding-right: 10px;
           }
         
         h1 { font-size:xx-large; margin:0 }
@@ -25,15 +28,9 @@ body, html
             height: auto;
             position: relative;
             color: #ffffff;
-            background-color: #160092d7;
+            background-color: #25729380;
             text-align: center
-        }
-        .frame{
-            text-align: center;
-            width:100%;
-            height: 100%;
-        }
-        .center{
+        }.center{
             margin-left: auto;
             margin-right: auto;
             border-spacing: 30px 0px;
@@ -46,27 +43,11 @@ body, html
         @media (min-width: 701px) {
             pre { font-size: 1rem; }
             
-        }.dns{
-            background-color: #54C4CF;
-        }.url{
-            background-color: #f0f4f7;
-        }.responsive{width: 35%; 
-            min-width: 300px; 
-            display: block;
-            margin-left: auto;
-            margin-right: auto; 
-        }.webserver{
-            background-color: #fff647;
-            align-content: center;
-        }.class{
-            background-color: #1c8adb;
         }footer{
-            background-color: #7c769bd7;
+            background-color: #3d90a5af;
             text-align: center;
             margin-left: auto;
             margin-right: auto;
-        }.classbody{
-            background-image: url(background.jpeg);
-            background-size: 50%;
+            padding: 20px;
         }
         
